--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "composer-names",
   "version": "1.0.0",
-  "description": "Get a rondom composer name",
+  "description": "Get a random composer name",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
